--- a/jamovi/brawsim.u.yaml
+++ b/jamovi/brawsim.u.yaml
@@ -3451,6 +3451,7 @@ children:
                                           - type: ActionButton
                                             name: doMeta5AmBtn
                                             maxHeight: 24
+                                            maxWidth: 15
                                             margin: none
                                             cell:
                                               row: 1
