--- a/jamovi/brawsim.u.yaml
+++ b/jamovi/brawsim.u.yaml
@@ -2704,7 +2704,7 @@ children:
                                   row: 0
                                   column: 0
                               - type: Label
-                                label: 'p(R<sub>0</sub>)'
+                                label: p(R<sub>0</sub>)
                                 cell:
                                   row: 0
                                   column: 1
@@ -2716,7 +2716,7 @@ children:
                                   row: 0
                                   column: 2
                               - type: Label
-                                label: 'mean(R<sub>+</sub>)'
+                                label: mean(R<sub>+</sub>)
                                 cell:
                                   row: 0
                                   column: 3
@@ -2849,7 +2849,7 @@ children:
                                   row: 0
                                   column: 0
                               - type: Label
-                                label: 'p(R<sub>0</sub>)'
+                                label: p(R<sub>0</sub>)
                                 cell:
                                   row: 0
                                   column: 1
@@ -2861,7 +2861,7 @@ children:
                                   row: 0
                                   column: 2
                               - type: Label
-                                label: 'mean(R<sub>+</sub>)'
+                                label: mean(R<sub>+</sub>)
                                 cell:
                                   row: 0
                                   column: 3
@@ -2873,7 +2873,7 @@ children:
                                   row: 0
                                   column: 4
                               - type: Label
-                                label: 'R<sub>+</sub>'
+                                label: R<sub>+</sub>
                                 cell:
                                   row: 0
                                   column: 5
@@ -3015,7 +3015,7 @@ children:
                                   row: 0
                                   column: 0
                               - type: Label
-                                label: 'p(R<sub>0</sub>)'
+                                label: p(R<sub>0</sub>)
                                 cell:
                                   row: 0
                                   column: 1
@@ -3027,7 +3027,7 @@ children:
                                   row: 0
                                   column: 2
                               - type: Label
-                                label: 'mean(R<sub>+</sub>)'
+                                label: mean(R<sub>+</sub>)
                                 cell:
                                   row: 0
                                   column: 3
@@ -3039,7 +3039,7 @@ children:
                                   row: 0
                                   column: 4
                               - type: Label
-                                label: 'R<sub>+</sub>'
+                                label: R<sub>+</sub>
                                 cell:
                                   row: 0
                                   column: 5
@@ -3188,7 +3188,7 @@ children:
                                   row: 0
                                   column: 0
                               - type: Label
-                                label: 'p(R<sub>0</sub>)'
+                                label: p(R<sub>0</sub>)
                                 cell:
                                   row: 0
                                   column: 1
@@ -3200,7 +3200,7 @@ children:
                                   row: 0
                                   column: 2
                               - type: Label
-                                label: 'mean(R<sub>+</sub>)'
+                                label: mean(R<sub>+</sub>)
                                 cell:
                                   row: 0
                                   column: 3
@@ -3212,7 +3212,7 @@ children:
                                   row: 0
                                   column: 4
                               - type: Label
-                                label: 'R<sub>+</sub>'
+                                label: R<sub>+</sub>
                                 cell:
                                   row: 0
                                   column: 5
@@ -3278,6 +3278,19 @@ children:
                                               row: 0
                                               column: 4
                                           - type: Label
+                                            label: Combine
+                                            cell:
+                                              row: 0
+                                              column: 5
+                                          - type: ActionButton
+                                            name: doMeta4AcBtn
+                                            maxHeight: 24
+                                            maxWidth: 15
+                                            margin: none
+                                            cell:
+                                              row: 0
+                                              column: 6
+                                          - type: Label
                                             label: Multiple samples
                                             cell:
                                               row: 1
@@ -3298,6 +3311,14 @@ children:
                                             cell:
                                               row: 1
                                               column: 4
+                                          - type: ActionButton
+                                            name: doMeta4AmcBtn
+                                            maxHeight: 24
+                                            maxWidth: 15
+                                            margin: none
+                                            cell:
+                                              row: 1
+                                              column: 6
                           - type: LayoutBox
                             style: inline
                             children:
@@ -3328,7 +3349,7 @@ children:
                                         margin: none
                                         children:
                                           - type: Label
-                                            label: Press here for an original sample
+                                            label: Original sample
                                             cell:
                                               row: 0
                                               column: 1
@@ -3354,7 +3375,20 @@ children:
                                               row: 0
                                               column: 4
                                           - type: Label
-                                            label: Press here to see multiple samples
+                                            label: Combine
+                                            cell:
+                                              row: 0
+                                              column: 5
+                                          - type: ActionButton
+                                            name: doMeta4BcBtn
+                                            maxHeight: 24
+                                            maxWidth: 15
+                                            margin: none
+                                            cell:
+                                              row: 0
+                                              column: 6
+                                          - type: Label
+                                            label: Multiple samples
                                             cell:
                                               row: 1
                                               column: 1
@@ -3374,6 +3408,14 @@ children:
                                             cell:
                                               row: 1
                                               column: 4
+                                          - type: ActionButton
+                                            name: doMeta4BmcBtn
+                                            maxHeight: 24
+                                            maxWidth: 15
+                                            margin: none
+                                            cell:
+                                              row: 1
+                                              column: 6
                       - type: ActionButton
                         name: meta4Help
                         margin: none
@@ -3412,7 +3454,7 @@ children:
                                         style: inline
                                         children:
                                           - type: Label
-                                            label: Press here for a single sample
+                                            label: Single sample
                                             cell:
                                               row: 0
                                               column: 1
@@ -3438,7 +3480,7 @@ children:
                                               row: 0
                                               column: 4
                                           - type: Label
-                                            label: Press here to see multiple samples
+                                            label: Multiple samples
                                             cell:
                                               row: 1
                                               column: 1
@@ -3479,7 +3521,7 @@ children:
                                         margin: none
                                         children:
                                           - type: Label
-                                            label: Press here for a single sample
+                                            label: Single sample
                                             cell:
                                               row: 0
                                               column: 1
@@ -3505,7 +3547,7 @@ children:
                                               row: 0
                                               column: 4
                                           - type: Label
-                                            label: Press here to see multiple samples
+                                            label: Multiple samples
                                             cell:
                                               row: 1
                                               column: 1
@@ -5236,7 +5278,7 @@ children:
                               row: 0
                               column: 0
                           - type: Label
-                            label: 'mean(R<sub>+</sub>)'
+                            label: mean(R<sub>+</sub>)
                             cell:
                               row: 0
                               column: 3
@@ -5249,7 +5291,7 @@ children:
                             events:
                               change: ./brawsim.events::onChange_metaDefaultRp
                           - type: Label
-                            label: 'p(R<sub>0</sub>)'
+                            label: p(R<sub>0</sub>)
                             cell:
                               row: 0
                               column: 1
@@ -5262,7 +5304,7 @@ children:
                               row: 0
                               column: 2
                           - type: Label
-                            label: n
+                            label: 'n'
                             cell:
                               row: 1
                               column: 1
